Fix de la compilation bloquée par les getLast()